shenyu-examples/shenyu-examples-motan/shenyu-examples-motan-service/k8s/shenyu-examples-motan.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shenyu-examples-motan-deployment
  namespace: shenyu-ingress
  labels:
    app: shenyu-examples-motan
    all: shenyu-examples-motan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shenyu-examples-motan
      all: shenyu-examples-motan
  strategy: {}
  template:
    metadata:
      namespace: shenyu-ingress
      labels:
        app: shenyu-examples-motan
        all: shenyu-examples-motan
    spec:
      containers:
        - image: shenyu-examples-motan
          name: shenyu-examples-motan
          livenessProbe:
            exec:
              command:
                - wget -q -O - http://localhost:8081/actuator/health | grep UP || exit 1
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 2
          ports:
            - containerPort: 8081
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: shenyu-examples-motan-service
  namespace: shenyu-ingress
  labels:
    app: shenyu-examples-motan
    all: shenyu-examples-motan
spec:
  selector:
    app: shenyu-examples-motan
    all: shenyu-examples-motan
  type: NodePort
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
      nodePort: 31190
    - name: "8082"
      port: 8082
      targetPort: 8082
      nodePort: 31191
status:
  loadBalancer: {}
