shenyu-examples/shenyu-examples-motan/shenyu-examples-motan-service/k8s/ingress.yml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: v1
kind: Service
metadata:
  name: motan-testtimeout
  annotations:
      kubernetes.io/ingress.class: shenyu
      shenyu.apache.org/plugin-motan-enabled: 'true'
      shenyu.apache.org/plugin-motan-app-name: motan
      shenyu.apache.org/plugin-motan-path: /motan/demoTest/testTimeOut
      shenyu.apache.org/plugin-motan-rpc-type: motan
      shenyu.apache.org/plugin-motan-service-name: org.apache.shenyu.examples.motan.service.MotanDemoService
      shenyu.apache.org/plugin-motan-method-name: testTimeOut
      shenyu.apache.org/plugin-motan-params-type: long
      shenyu.apache.org/plugin-motan-rpc-expand: |
        {
          "methodInfo":[
            {
              "methodName":"testTimeOut",
              "params":[
                {
                  "left":"long",
                  "right":"seconds"
                }
              ]
            }
          ],
          "group":"motan-shenyu-rpc",
          "timeout":2000
        }
spec:
  selector:
    app: shenyu-examples-motan
  ports:
    - port: 20880  # Assuming this is the motan service port

---

apiVersion: v1
kind: Service
metadata:
  name: motan-hello
  annotations:
      kubernetes.io/ingress.class: shenyu
      shenyu.apache.org/plugin-motan-enabled: 'true'
      shenyu.apache.org/plugin-motan-app-name: motan
      shenyu.apache.org/plugin-motan-context-path: /motan
      shenyu.apache.org/plugin-motan-path: /motan/demoTest/hello
      shenyu.apache.org/plugin-motan-rpc-type: motan
      shenyu.apache.org/plugin-motan-service-name: org.apache.shenyu.examples.motan.service.MotanDemoService
      shenyu.apache.org/plugin-motan-method-name: hello
      shenyu.apache.org/plugin-motan-params-type: java.lang.String
      shenyu.apache.org/plugin-motan-rpc-expand: |
        {
          "methodInfo": [
            {
              "methodName": "hello",
              "params": [
                {
                  "left": "java.lang.String",
                  "right": "name"
                }
              ]
            }
          ],
          "group": "motan-shenyu-rpc"
        }
spec:
  selector:
    app: shenyu-examples-motan
  ports:
    - port: 20881  # Assuming this is the Dubbo service port

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: shenyu
    shenyu.apache.org/plugin-motan-enabled: 'true'
    shenyu.apache.org/zookeeper-register-address: 123.60.144.138:2181
  name: demo-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: motan-testtimeout
                port:
                  number: 20880
            path: /motan/
            pathType: Prefix
          - backend:
              service:
                name: motan-hello
                port:
                  number: 20880
            path: /motan/
            pathType: Prefix
